--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -2,10 +2,11 @@ server {
         listen 80 default_server;
         listen [::]:80 default_server;
         server_name localhost;
+        
 
         location / {
-         root /var/www/html;
-         index index.html;
-               
+            # root /../../dist/;
+            root /var/www/html;
+            index index.html;  
         }
 }
