Preparing branch to main

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,17 +1,8 @@
 server {
-        # listen 80 default_server;
-        listen 80;
-        # listen [::]:80 default_server;
-        listen [::]:80;
+        listen 80 default_server;
+        listen [::]:80 default_server;
         server_name to-do-list.thibault-peronno.fr;
         return 301 https://$host$request_uri;      
-        
-
-        # location / {
-        #     # root /../../dist/;
-        #     root /var/www/html;
-        #     index index.html;  
-        # }
 }
 
 server {
